# cpp-project-template

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md
benchmarks/: MyClassBenchmark.cpp
include/MyLib/: MyClass.hpp
libs/: README.md
src/MyLib/: MyClass.cpp
tests/: MyClassTest.cpp
